--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "langchain-google-genai>=2.1.9",
+    "langchain-mcp-adapters>=0.1.9",
+    "langchain-openai>=0.3.28",
+    "langgraph>=0.6.3",
     "openai>=1.98.0",
     "openai-agents>=0.2.4",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "pytz>=2025.2",
 ]
